feat: add contacts

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   </head>
   <body>
       <header>
-          <!-- <img class="fujifilm" src="/source/img/444481.png" alt="img"> -->
-      </header>
+        <div class="contacts">
+          <p>+7(4832)66-39-98</p>
+          <a href="https://yandex.ru/maps/org/tsentralny_dom_byta/1025111412/?ll=34.372089%2C53.250580&z=13.9">г.Брянск
+            пр.Ленина, 67, Центральны Дом Быта, 2 этаж</a>
+          <p>fuji32@bk.ru</p>
+        </div>
+        </header>
 
       <!-- <header></header>
       <main>
