--- a/index.html
+++ b/index.html
@@ -9,26 +9,40 @@
       <header>
         <div class="contacts">
           <p>+7(4832)66-39-98</p>
-          <a href="https://yandex.ru/maps/org/tsentralny_dom_byta/1025111412/?ll=34.372089%2C53.250580&z=13.9">г.Брянск
-            пр.Ленина, 67, Центральны Дом Быта, 2 этаж</a>
+          <a href="https://yandex.ru/maps/org/tsentralny_dom_byta/1025111412/?ll=34.372089%2C53.250580&z=13.9">
+            <p>г.Брянск пр.Ленина, 67,</p> 
+            <p>Центральны Дом Быта, 2 этаж</p></a>
           <p>fuji32@bk.ru</p>
         </div>
         </header>
-
-      <!-- <header></header>
-      <main>
-          <nav>
-              <div class="first-two">
-                <div class="card"></div>
-                <div class="card"></div>
+        <main>
+          <div class="cards">
+            <div class="card">
+              <div class="text-in-card">
+                <p>Срочное фото</p>
+              <p>на документы</p>
               </div>
-            <div class="second-two">
-                <div class="card"></div>
-            <div class="card"></div>
-        </div>
-            
-        </nav>
-      </main>
-      <footer></footer> -->
+              
+            </div>
+            <div class="card">
+              <div class="text-in-card">
+              <p>Печать</p>
+              <p>на фотобумаге</p>
+            </div>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="card">
+              <div class="text-in-card">
+              <p>Полиграфия</p>
+            </div>
+            </div>
+            <div class="card">
+              <div class="text-in-card">
+              <p>Аксессуары</p>
+            </div>
+            </div>
+          </div>
+        </main>
   </body>
 </html>
