feat: add map and more

--- a/index.html
+++ b/index.html
@@ -7,42 +7,78 @@
   </head>
   <body>
       <header>
-        <div class="contacts">
-          <p>+7(4832)66-39-98</p>
-          <a href="https://yandex.ru/maps/org/tsentralny_dom_byta/1025111412/?ll=34.372089%2C53.250580&z=13.9">
-            <p>г.Брянск пр.Ленина, 67,</p> 
-            <p>Центральны Дом Быта, 2 этаж</p></a>
-          <p>fuji32@bk.ru</p>
-        </div>
+        <nav>
+          <a href="#contacts">Контакты</a>
+          <a href="#about-us">О нас</a>
+        </nav>
         </header>
         <main>
           <div class="cards">
-            <div class="card">
+            <a href="#photo-for-documents" class="card">
               <div class="text-in-card">
                 <p>Срочное фото</p>
               <p>на документы</p>
               </div>
               
-            </div>
-            <div class="card">
+            </a>
+            <a href="#print" class="card">
               <div class="text-in-card">
               <p>Печать</p>
               <p>на фотобумаге</p>
             </div>
-            </div>
+            </a>
           </div>
           <div class="cards">
-            <div class="card">
+            <a href="#polygraphy" class="card">
               <div class="text-in-card">
               <p>Полиграфия</p>
             </div>
-            </div>
-            <div class="card">
+            </a>
+            <a href="#accessories" class="card">
               <div class="text-in-card">
               <p>Аксессуары</p>
             </div>
-            </div>
+            </a>
           </div>
+
+          <div class="about-us" id="about-us">
+            <p>Мы работает в сфере фотоуслуг уже более 20 лет. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt earum quaerat laboriosam eligendi sit, similique consequatur? Alias veniam debitis vero, facilis sed illum eligendi doloribus magnam, laborum, ipsum perferendis blanditiis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur cupiditate ducimus sunt hic repellat beatae sit quidem exercitationem eligendi excepturi, ratione voluptatibus placeat tempora voluptates fuga quasi quibusdam odio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dignissimos quis repudiandae maiores odio ex quos dolores, sed, facere officia quod sequi rerum deserunt esse magnam vitae error libero asperiores.</p>
+          </div>
+
+          <div class="photo-for-documents" id="photo-for-documents">
+            <p>Наши специалисты сделают фото за 5 минут на любые виды документов.</p>
+          </div>
+
+          <div class="print" id="print">
+            <p>Мокрая печать на настоящей фотобумаге!</p>
+          </div>
+
+          <div class="polygraphy" id="polygraphy">
+            <p>Печать на дереве, печать на кружках, на футболках!</p>
+          </div>
+
+          <div class="accessories" id="accessories">
+            <p>Продаём батарейки! Бумагу!</p>
+          </div>
+
+          <ul class="contacts" id="contacts">
+            <li>+7(4832)66-39-98</li>
+            <li>г.Брянск пр.Ленина, 67, Центральны Дом Быта, 2 этаж</li>
+            <li>fuji32@bk.ru</li>
+          </ul>
+
+          <div class="map" style="position:relative;overflow:hidden;">
+            <!-- <a href="https://yandex.ru/maps/org/tsentralny_dom_byta/1025111412/?utm_medium=mapframe&utm_source=maps" 
+            style="color:#eee;font-size:12px;position:absolute;top:0px;">Центральный дом быта</a> -->
+            <a href="https://yandex.ru/maps/191/bryansk/category/shopping_mall/184108083/?utm_medium=mapframe&utm_source=maps" 
+            style="color:#eee;font-size:12px;position:absolute;top:14px;">Торговый центр в Брянске</a>
+            <a href="https://yandex.ru/maps/191/bryansk/category/sale_and_lease_of_commercial_real_estate/184107521/?utm_medium=mapframe&utm_source=maps" 
+            style="color:#eee;font-size:12px;position:absolute;top:28px;">Продажа и аренда коммерческой недвижимости в Брянске</a>
+            <iframe src="https://yandex.ru/map-widget/v1/-/CCUqyGFBwC" width="100%" height="400" frameborder="1" allowfullscreen="true" style="position:relative;">
+            </iframe>
+          </div>
+
+          
         </main>
   </body>
 </html>
