--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
       <header>
-        <nav>
+        <nav class="contacts-and-about-us">
           <a href="#contacts">Контакты</a>
           <a href="#about-us">О нас</a>
         </nav>
@@ -41,44 +41,55 @@
             </a>
           </div>
 
-          <div class="about-us" id="about-us">
+          <div class="about-us, blok" id="about-us">
+            <h2>О нас</h2>
             <p>Мы работает в сфере фотоуслуг уже более 20 лет. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt earum quaerat laboriosam eligendi sit, similique consequatur? Alias veniam debitis vero, facilis sed illum eligendi doloribus magnam, laborum, ipsum perferendis blanditiis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur cupiditate ducimus sunt hic repellat beatae sit quidem exercitationem eligendi excepturi, ratione voluptatibus placeat tempora voluptates fuga quasi quibusdam odio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dignissimos quis repudiandae maiores odio ex quos dolores, sed, facere officia quod sequi rerum deserunt esse magnam vitae error libero asperiores.</p>
           </div>
 
-          <div class="photo-for-documents" id="photo-for-documents">
+          <div class="photo-for-documents, blok" id="photo-for-documents">
+            <h2>Срочное фото на документы</h2>
             <p>Наши специалисты сделают фото за 5 минут на любые виды документов.</p>
           </div>
 
-          <div class="print" id="print">
+          <div class="print, blok" id="print">
+            <h2>Печать на фотобумаге</h2>
             <p>Мокрая печать на настоящей фотобумаге!</p>
           </div>
 
-          <div class="polygraphy" id="polygraphy">
+          <div class="polygraphy, blok" id="polygraphy">
+            <h2>Полиграфия</h2>
             <p>Печать на дереве, печать на кружках, на футболках!</p>
           </div>
 
-          <div class="accessories" id="accessories">
+          <div class="accessories, blok" id="accessories">
+              <h2>Аксессуары</h2>
             <p>Продаём батарейки! Бумагу!</p>
           </div>
 
-          <ul class="contacts" id="contacts">
+          <ul class="contacts, blok" id="contacts">
+            <h2>Контакты</h2>
             <li>+7(4832)66-39-98</li>
-            <li>г.Брянск пр.Ленина, 67, Центральны Дом Быта, 2 этаж</li>
             <li>fuji32@bk.ru</li>
+            <li>г.Брянск пр.Ленина, 67, Центральны Дом Быта, 2 этаж</li>
+            <li><div class="map" style="position:relative;overflow:hidden;">
+              <!-- <a href="https://yandex.ru/maps/org/tsentralny_dom_byta/1025111412/?utm_medium=mapframe&utm_source=maps" 
+              style="color:#eee;font-size:12px;position:absolute;top:0px;">Центральный дом быта</a> -->
+              <a href="https://yandex.ru/maps/191/bryansk/category/shopping_mall/184108083/?utm_medium=mapframe&utm_source=maps" 
+              style="color:#eee;font-size:12px;position:absolute;top:14px;">Торговый центр в Брянске</a>
+              <a href="https://yandex.ru/maps/191/bryansk/category/sale_and_lease_of_commercial_real_estate/184107521/?utm_medium=mapframe&utm_source=maps" 
+              style="color:#eee;font-size:12px;position:absolute;top:28px;">Продажа и аренда коммерческой недвижимости в Брянске</a>
+              <iframe src="https://yandex.ru/map-widget/v1/-/CCUqyGFBwC" width="100%" height="380" frameborder="1" allowfullscreen="true" style="position:relative;">
+              </iframe>
+            </div></li>
           </ul>
 
-          <div class="map" style="position:relative;overflow:hidden;">
-            <!-- <a href="https://yandex.ru/maps/org/tsentralny_dom_byta/1025111412/?utm_medium=mapframe&utm_source=maps" 
-            style="color:#eee;font-size:12px;position:absolute;top:0px;">Центральный дом быта</a> -->
-            <a href="https://yandex.ru/maps/191/bryansk/category/shopping_mall/184108083/?utm_medium=mapframe&utm_source=maps" 
-            style="color:#eee;font-size:12px;position:absolute;top:14px;">Торговый центр в Брянске</a>
-            <a href="https://yandex.ru/maps/191/bryansk/category/sale_and_lease_of_commercial_real_estate/184107521/?utm_medium=mapframe&utm_source=maps" 
-            style="color:#eee;font-size:12px;position:absolute;top:28px;">Продажа и аренда коммерческой недвижимости в Брянске</a>
-            <iframe src="https://yandex.ru/map-widget/v1/-/CCUqyGFBwC" width="100%" height="400" frameborder="1" allowfullscreen="true" style="position:relative;">
-            </iframe>
-          </div>
+          
 
           
         </main>
+
+        <footer>
+          <p>Брянск, 2021</p>
+        </footer>
   </body>
 </html>
