feat: change menu

--- a/index.html
+++ b/index.html
@@ -8,40 +8,16 @@
   </head>
   <body>
       <header>
-        <nav class="contacts-and-about-us">
+        <nav class="menu">
+          <a href="#photo-for-documents">Фото на документы</a>
+          <a href="#print">Мокрая печать</a>
+          <a href="#polygraphy">Полиграфия</a>
+          <a href="#accessories">Аксессуары</a>
           <a href="#contacts">Контакты</a>
-          <a href="#about-us">О нас</a>
+          <!-- <a href="#about-us">О нас</a> -->
         </nav>
         </header>
         <main>
-          <div class="cards">
-            <a href="#photo-for-documents" class="card">
-              <div class="text-in-card">
-                <p>Срочное фото</p>
-              <p>на документы</p>
-              </div>
-              
-            </a>
-            <a href="#print" class="card">
-              <div class="text-in-card">
-              <p>Печать</p>
-              <p>на фотобумаге</p>
-            </div>
-            </a>
-          </div>
-          <div class="cards">
-            <a href="#polygraphy" class="card">
-              <div class="text-in-card">
-              <p>Полиграфия</p>
-            </div>
-            </a>
-            <a href="#accessories" class="card">
-              <div class="text-in-card">
-              <p>Аксессуары</p>
-            </div>
-            </a>
-          </div>
-
           <div class="about-us, blok" id="about-us">
             <h2>О нас</h2>
             <p>Мы работает в сфере фотоуслуг уже более 20 лет. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt earum quaerat laboriosam eligendi sit, similique consequatur? Alias veniam debitis vero, facilis sed illum eligendi doloribus magnam, laborum, ipsum perferendis blanditiis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur cupiditate ducimus sunt hic repellat beatae sit quidem exercitationem eligendi excepturi, ratione voluptatibus placeat tempora voluptates fuga quasi quibusdam odio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dignissimos quis repudiandae maiores odio ex quos dolores, sed, facere officia quod sequi rerum deserunt esse magnam vitae error libero asperiores.</p>
