feat: add script

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
       <header>
+        <img class="burger"src="source/img/lines_menu_burger_icon_123889.svg" alt="img">
         <nav class="menu">
           <a href="#photo-for-documents">Фото на документы</a>
           <a href="#print">Мокрая печать</a>
@@ -69,4 +70,6 @@
           <p>Брянск, 2021</p>
         </footer>
   </body>
+  <script src="script.js"></script>
+
 </html>
