--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
   <body>
       <header>
         <img class="burger"src="source/img/lines_menu_burger_icon_123889.svg" alt="img">
-        <nav class="menu">
-          <a href="#photo-for-documents">Фото на документы</a>
-          <a href="#print">Мокрая печать</a>
-          <a href="#polygraphy">Полиграфия</a>
-          <a href="#accessories">Аксессуары</a>
-          <a href="#contacts">Контакты</a>
-          <!-- <a href="#about-us">О нас</a> -->
-        </nav>
+        <div class="cross-menu">
+          <img class="cross" src="source/img/1487086345-cross_81577.svg" alt="img">
+          <nav class="menu">
+            <a href="#photo-for-documents">Фото на документы</a>
+            <a href="#print">Мокрая печать</a>
+            <a href="#polygraphy">Полиграфия</a>
+            <a href="#accessories">Аксессуары</a>
+            <a href="#contacts">Контакты</a>
+            <!-- <a href="#about-us">О нас</a> -->
+          </nav>
+        </div>
+        
         </header>
         <main>
           <div class="about-us, blok" id="about-us">
