--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
       <header>
-        <img class="burger"src="source/img/lines_menu_burger_icon_123889.svg" alt="img">
+        <img class="burger" id="burger" src="source/img/lines_menu_burger_icon_123889.svg" alt="img">
         <div class="cross-menu">
-          <img class="cross" src="source/img/1487086345-cross_81577.svg" alt="img">
+          <img class="cross" id="cross" src="source/img/1487086345-cross_81577.svg" alt="img">
           <nav class="menu">
             <a href="#photo-for-documents">Фото на документы</a>
             <a href="#print">Мокрая печать</a>
