feat: finish menu

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
       <header>
         <img class="burger" id="burger" src="source/img/lines_menu_burger_icon_123889.svg" alt="img">
-        <div class="cross-menu">
-          <img class="cross" id="cross" src="source/img/1487086345-cross_81577.svg" alt="img">
-          <nav class="menu">
+        <div class="cross-menu" id="cross-menu">
+          <img class="close-menu cross"  src="source/img/1487086345-cross_81577.svg" alt="img">
+          <nav class="menu" id="close-menu">
             <a href="#photo-for-documents">Фото на документы</a>
             <a href="#print">Мокрая печать</a>
             <a href="#polygraphy">Полиграфия</a>
@@ -22,7 +22,7 @@
         </div>
         
         </header>
-        <main>
+        <main class="close-menu">
           <div class="about-us, blok" id="about-us">
             <h2>О нас</h2>
             <p>Мы работает в сфере фотоуслуг уже более 20 лет. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt earum quaerat laboriosam eligendi sit, similique consequatur? Alias veniam debitis vero, facilis sed illum eligendi doloribus magnam, laborum, ipsum perferendis blanditiis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur cupiditate ducimus sunt hic repellat beatae sit quidem exercitationem eligendi excepturi, ratione voluptatibus placeat tempora voluptates fuga quasi quibusdam odio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dignissimos quis repudiandae maiores odio ex quos dolores, sed, facere officia quod sequi rerum deserunt esse magnam vitae error libero asperiores.</p>
