feat: hide during scrolling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-      <header>
+      <header id="header">
         <img class="burger" id="burger" src="source/img/lines_menu_burger_icon_123889.svg" alt="img">
         <div class="cross-menu" id="cross-menu">
           <img class="close-menu cross"  src="source/img/1487086345-cross_81577.svg" alt="img">
