--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class="burger" id="burger" src="source/img/lines_menu_burger_icon_123889.svg" alt="img">
         <div class="cross-menu" id="cross-menu">
           <img class="close-menu cross"  src="source/img/1487086345-cross_81577.svg" alt="img">
-          <nav class="menu" id="close-menu">
+          <nav class="menu">
             <a href="#photo-for-documents">Фото на документы</a>
             <a href="#print">Мокрая печать</a>
             <a href="#polygraphy">Полиграфия</a>
