feat: change logo

--- a/index.html
+++ b/index.html
@@ -16,39 +16,43 @@
             <a href="#print">Мокрая печать</a>
             <a href="#polygraphy">Полиграфия</a>
             <a href="#accessories">Аксессуары</a>
+            <a href="#contacts">Восстановление и отцифровка</a>
             <a href="#contacts">Контакты</a>
             <!-- <a href="#about-us">О нас</a> -->
           </nav>
+
         </div>
-        
-        </header>
-        <main class="close-menu">
-          <div class="about-us, blok" id="about-us">
+        <h1 class="logo">Фотосалон Фуджи</h1>
+
+      </header>
+      
+      <main class="close-menu">
+          <div class="about-us block" id="about-us">
             <h2>О нас</h2>
-            <p>Мы работает в сфере фотоуслуг уже более 20 лет. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt earum quaerat laboriosam eligendi sit, similique consequatur? Alias veniam debitis vero, facilis sed illum eligendi doloribus magnam, laborum, ipsum perferendis blanditiis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur cupiditate ducimus sunt hic repellat beatae sit quidem exercitationem eligendi excepturi, ratione voluptatibus placeat tempora voluptates fuga quasi quibusdam odio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dignissimos quis repudiandae maiores odio ex quos dolores, sed, facere officia quod sequi rerum deserunt esse magnam vitae error libero asperiores.</p>
+            <p>Мы работает в сфере фотоуслуг уже более 20 лет. </p>
           </div>
 
-          <div class="photo-for-documents, blok" id="photo-for-documents">
+          <div class="photo-for-documents block" id="photo-for-documents">
             <h2>Срочное фото на документы</h2>
             <p>Наши специалисты сделают фото за 5 минут на любые виды документов.</p>
           </div>
 
-          <div class="print, blok" id="print">
+          <div class="print block" id="print">
             <h2>Печать на фотобумаге</h2>
             <p>Мокрая печать на настоящей фотобумаге!</p>
           </div>
 
-          <div class="polygraphy, blok" id="polygraphy">
+          <div class="polygraphy block" id="polygraphy">
             <h2>Полиграфия</h2>
             <p>Печать на дереве, печать на кружках, на футболках!</p>
           </div>
 
-          <div class="accessories, blok" id="accessories">
+          <div class="accessories block" id="accessories">
               <h2>Аксессуары</h2>
             <p>Продаём батарейки! Бумагу!</p>
           </div>
 
-          <ul class="contacts, blok" id="contacts">
+          <ul class="contacts block" id="contacts">
             <h2>Контакты</h2>
             <li>+7(4832)66-39-98</li>
             <li>fuji32@bk.ru</li>
