--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
       <header id="header">
         <img class="burger" id="burger" src="source/img/lines_menu_burger_icon_123889.svg" alt="img">
-        <div class="cross-menu" id="cross-menu">
+        <div class="cross-and-menu" id="cross-menu">
           <img class="close-menu cross"  src="source/img/1487086345-cross_81577.svg" alt="img">
           <nav class="menu">
             <a href="#photo-for-documents">Фото на документы</a>
@@ -20,21 +20,31 @@
             <a href="#contacts">Контакты</a>
             <!-- <a href="#about-us">О нас</a> -->
           </nav>
-
         </div>
         <h1 class="logo">Фотосалон Фуджи</h1>
-
+        <p class="logo-adress">Брянск, Центральный <br> дом быта, 2 этаж</p>
       </header>
       
       <main class="close-menu">
-          <div class="about-us block" id="about-us">
+          <!-- <div class="about-us block" id="about-us">
             <h2>О нас</h2>
             <p>Мы работает в сфере фотоуслуг уже более 20 лет. </p>
-          </div>
+          </div> -->
 
           <div class="photo-for-documents block" id="photo-for-documents">
             <h2>Срочное фото на документы</h2>
             <p>Наши специалисты сделают фото за 5 минут на любые виды документов.</p>
+            <table class="cost-table">
+              <tr>
+               <th>Формат</th>
+               <th>Стоимость, руб</th>
+              </tr>
+              <tr><td>3х4</td><td>3шт - 250 <br> 6шт - 300</td></tr>
+              <tr><td>3,5х4.5 <br>(виза, з/паспорт)</td><td>2шт - 300 <br> 4шт - 350<br> 6шт - 400</td></tr>
+              <tr><td>Паспорт РФ</td><td>4шт - 350</td></tr>
+              <tr><td>4х6</td><td>2шт - 300<br> 4шт - 350<br> 6шт - 400</td></tr>
+              <tr><td>9х12</td><td>1шт - 300<br> 2шт - 400<br></tr>
+             </table>
           </div>
 
           <div class="print block" id="print">
