feat: made block "photo-for-documents"

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
           <div class="photo-for-documents block" id="photo-for-documents">
             <h2>Срочное фото на документы</h2>
-            <p>Наши специалисты сделают фото за 5 минут на любые виды документов.</p>
+            <p class="photo-for-documents-text">Наши специалисты сделают фото за 5 минут на любые виды документов:</p>
             <table class="cost-table">
               <tr>
                <th>Формат</th>
@@ -45,6 +45,14 @@
               <tr><td>4х6</td><td>2шт - 300<br> 4шт - 350<br> 6шт - 400</td></tr>
               <tr><td>9х12</td><td>1шт - 300<br> 2шт - 400<br></tr>
              </table>
+            <p class="photo-for-documents-text">Вместе с этим можем:</p>
+            <table class="cost-table service">
+              <tr><td>заменить одежду</td><td>50 руб</td></tr>
+              <tr><td>скинуть на флешку/почту</td><td>50 руб</td></tr>
+              <tr><td>скинуть на флешку/почту без печати</td><td>250 руб</td></tr>
+            </table>
+            <p class="photo-for-documents-text">Также делаем художественное фото: 1 человек - 400 руб (+50 руб за человека).</p>
+              <!-- <img class="photo-for-documents-img" src="/source/img/Depositphotos_67375709_l-2015.jpg" alt="img"> -->
           </div>
 
           <div class="print block" id="print">
