feat: made block "print"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <img class="close-menu cross"  src="source/img/1487086345-cross_81577.svg" alt="img">
           <nav class="menu">
             <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#print">Мокрая печать</a>
+            <a href="#print">Печать фото и проявка плёнки</a>
             <a href="#polygraphy">Полиграфия</a>
             <a href="#accessories">Аксессуары</a>
             <a href="#contacts">Восстановление и отцифровка</a>
@@ -56,8 +56,18 @@
           </div>
 
           <div class="print block" id="print">
-            <h2>Печать на фотобумаге</h2>
-            <p>Мокрая печать на настоящей фотобумаге!</p>
+            <h2>Печать фото и проявка плёнки</h2>
+            <p>Печать фотографий происходит в том числе
+               в фотолаборатории по технологии мокрой печати. По сути, это не печать, а проявка: 
+              машина освещает специальная фотобумага</p>
+              <table class="cost-table">
+                <tr><td>10х15</td><td>18 руб</td></tr>
+                <tr><td>15х21</td><td>35 руб</td></tr>
+                <tr><td>21х30</td><td>70 руб</td></tr>
+                <tr><td>30х40</td><td>180 руб</td></tr>
+                <tr><td>30х45</td><td>200 руб</td></tr>
+                <tr><td>Проявка плёнки</td><td>260 руб</td></tr>
+               </table>
           </div>
 
           <div class="polygraphy block" id="polygraphy">
