feat: внедняем коэффициент пропорциональности

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <header id="header">
-        <!-- <div class="header-content">
+        <div class="header-content">
           <nav class="menu">
             <div>
               <a href="#photo-for-documents">Фото на документы</a>
@@ -28,7 +28,7 @@
             <p>Брянск, Центральный 
               дом быта, 2 этаж</p>
           </div>
-        </div> -->
+        </div>
       </header>
       <main>
         <section class="about-us">
@@ -45,8 +45,6 @@
               <a href="" class="services-view">Обзор услуг</a>
             </div>
             <img class="about-us-img" src="/source/img/about-us/about-us.png" alt="img">
-            <!-- <img class="about-us-img-1070" src="/source/img/about-us/about-us-1070.png" alt="img">
-            <img class="about-us-img-885" src="/source/img/about-us/about-us-885.png" alt="img"> -->
           </div>
         </section>
       </main>
