Фото на документы

--- a/index.html
+++ b/index.html
@@ -2,54 +2,67 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fuji</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-      <header id="header">
-        <div class="header-content">
-          <nav class="menu">
-            <div>
-              <a href="#photo-for-documents">Фото на документы</a>
-              <a href="#polygraphy">Полиграфия</a>
+    <header id="header">
+      <div class="header-content">
+        <nav class="menu">
+          <div>
+            <a href="#photo-for-documents">Фото на документы</a>
+            <a href="#polygraphy">Полиграфия</a>
+          </div>
+          <div>
+            <a href="#print">Печать фото и проявка плёнки</a>
+            <a href="#accessories">Аксессуары</a>
+          </div>
+          <div>
+            <a href="#contacts">Восстановление и отцифровка</a>
+            <a href="#contacts">Контакты</a>
+          </div>
+        </nav>
+        <div class="logo">
+          <p class="title">Фотосалон Фуджи</p>
+          <p>Брянск, Центральный дом быта, 2 этаж</p>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="about-us">
+        <div class="about-us-content">
+          <div class="about-us-content-main">
+            <h2 class="about-us-content-main-text1">Весь спектр фотоуслуг в одном магазине</h2>
+            <p class="about-us-content-main-text2">
+              Мы работаем уже более 20 лет и знаем своё дело. Приходите к нам -
+              мы сфотографируем вас на документы, проявим фото на настоящей
+              фотобумаге, нанесём изображение на дерево, отцифруем старые
+              видеокассеты, и это ещё не всё!
+            </p>
+            <a href="" class="services-view">Обзор услуг</a>
+          </div>
+          <img
+            class="about-us-img"
+            src="/source/img/about-us/about-us.png"
+            alt="img"
+          />
+        </div>
+      </section>
+      <section class="photo-for-documents">
+        <div class="photo-for-documents-content">
+          <h2 class="photo-for-documents-content-text1"> Фото на документы</h2>
+          <p class="photo-for-documents-content-text2">
+            Наши специалисты сделают фото за 5 минут на любые виды документов:
+          </p>
+          <div class="cards">
+            <div class="pasport-RF">
+              <img src="" alt="img">
             </div>
-            <div>
-              <a href="#print">Печать фото и проявка плёнки</a>
-              <a href="#accessories">Аксессуары</a>
-            </div>
-            <div>
-              <a href="#contacts">Восстановление и отцифровка</a>
-              <a href="#contacts">Контакты</a>
-            </div>
-          </nav>
-          <div class="logo">
-            <p class="title">Фотосалон Фуджи</p>
-            <p>Брянск, Центральный 
-              дом быта, 2 этаж</p>
           </div>
         </div>
-      </header>
-      <main>
-        <section class="about-us">
-          <div class="about-us-content">
-            <div class="about-us-content-main">
-            <p class="text1">Весь спектр фотоуслуг
-              в одном магазине</p>
-              <p class="text2">Мы работаем уже более 20 лет и знаем своё дело. 
-                Приходите к нам - мы сфотографируем вас на 
-                документы, проявим фото на настоящей фотобумаге,
-                нанесём изображение на дерево, отцифруем старые
-                видеокассеты, и это ещё не всё! 
-              </p>
-              <a href="" class="services-view">Обзор услуг</a>
-            </div>
-            <img class="about-us-img" src="/source/img/about-us/about-us.png" alt="img">
-          </div>
-        </section>
-      </main>
-     
+      </section>
+    </main>
   </body>
   <script src="script.js"></script>
-
 </html>
