фото на документы

--- a/index.html
+++ b/index.html
@@ -49,15 +49,51 @@
           />
         </div>
       </section>
-      <section class="photo-for-documents">
-        <div class="photo-for-documents-content">
-          <h2 class="photo-for-documents-content-text1"> Фото на документы</h2>
-          <p class="photo-for-documents-content-text2">
+      <section class="block photo-for-documents">
+        <div class="block-content">
+          <h2 class="block-content-title"> Фото на документы</h2>
+          <p class="block-content-text">
             Наши специалисты сделают фото за 5 минут на любые виды документов:
           </p>
           <div class="cards">
-            <div class="pasport-RF">
-              <img src="" alt="img">
+            <div class="card">
+              <img class="card-img" src="/source/img/photo-for-documents/pasportRF.png" alt="img">
+              <div class="card-text">
+                <h3>Паспорт РФ</h3>
+                <p>4шт - 350р</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img" src="/source/img/photo-for-documents/zagran.png" alt="img">
+              <div class="card-text">
+                <h3>Загранпаспорт</h3>
+                <p>2шт - 300р</p>
+                <p>4шт - 350р</p>
+                <p>6шт - 400р</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img" src="/source/img/photo-for-documents/_3х4.png" alt="img">
+              <div class="card-text">
+                <h3>Фото 3x4</h3>
+                <p>3шт - 250р</p>
+                <p>6шт - 300р</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img" src="/source/img/photo-for-documents/_4х6.png" alt="img">
+              <div class="card-text">
+                <h3>Фото 4x6</h3>
+                <p>2шт - 300р</p>
+                <p>4шт - 350р</p>
+                <p>6шт - 400р</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img" src="/source/img/photo-for-documents/unknown.png" alt="img">
+              <div class="card-text">
+                <h3>Сделаем фото вашего формата</h3>
+              </div>
             </div>
           </div>
         </div>
