--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <div class="card">
               <img class="card-img" src="/source/img/photo-for-documents/pasportRF.png" alt="img">
               <div class="card-text">
+                <br>
                 <h3>Паспорт РФ</h3>
                 <p>4шт - 350р</p>
               </div>
@@ -67,36 +68,42 @@
               <img class="card-img" src="/source/img/photo-for-documents/zagran.png" alt="img">
               <div class="card-text">
                 <h3>Загранпаспорт</h3>
-                <p>2шт - 300р</p>
-                <p>4шт - 350р</p>
-                <p>6шт - 400р</p>
+                <p>2шт - 300р <br>
+                   4шт - 350р <br>
+                   6шт - 400р</p>
               </div>
             </div>
             <div class="card">
               <img class="card-img" src="/source/img/photo-for-documents/_3х4.png" alt="img">
               <div class="card-text">
                 <h3>Фото 3x4</h3>
-                <p>3шт - 250р</p>
-                <p>6шт - 300р</p>
+                <p>3шт - 250р <br>
+                6шт - 300р</p>
               </div>
             </div>
             <div class="card">
               <img class="card-img" src="/source/img/photo-for-documents/_4х6.png" alt="img">
               <div class="card-text">
                 <h3>Фото 4x6</h3>
-                <p>2шт - 300р</p>
-                <p>4шт - 350р</p>
-                <p>6шт - 400р</p>
+                <p>2шт - 300р <br>
+                  4шт - 350р <br>
+                  6шт - 400р</p>
               </div>
             </div>
             <div class="card">
               <img class="card-img" src="/source/img/photo-for-documents/unknown.png" alt="img">
               <div class="card-text">
-                <h3>Сделаем фото вашего формата</h3>
+                <p>Сделаем фото вашего формата</p>
               </div>
             </div>
           </div>
         </div>
+      </section>
+      <section class="block print">
+        <h2 class="block-content-title">Печать и проявка плёнки</h2>
+        <p class="block-content-text">
+          Фотопечать умерла? - Нет! Всё больше молодёжи приходит к нам за реальными фото, да ещё и с плёнки! Вспомните, как, придя к кому-то в гости, смотрели фотоальбом. Это же целое действо! Приятное занятие, за которым можно провести время с друзьями и близкими.
+        </p>
       </section>
     </main>
   </body>
