--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       <section class="about-us">
         <div class="about-us-content">
           <div class="about-us-content-main">
-            <h2 class="about-us-content-main-text1">Весь спектр фотоуслуг в одном магазине</h2>
+            <h2 class="about-us-content-main-text1">
+              Весь спектр фотоуслуг в одном магазине
+            </h2>
             <p class="about-us-content-main-text2">
               Мы работаем уже более 20 лет и знаем своё дело. Приходите к нам -
               мы сфотографируем вас на документы, проявим фото на настоящей
@@ -51,48 +53,74 @@
       </section>
       <section class="block photo-for-documents">
         <div class="block-content">
-          <h2 class="block-content-title"> Фото на документы</h2>
+          <h2 class="block-content-title">Фото на документы</h2>
           <p class="block-content-text">
             Наши специалисты сделают фото за 5 минут на любые виды документов:
           </p>
-          <div class="cards">
-            <div class="card">
-              <img class="card-img" src="/source/img/photo-for-documents/pasportRF.png" alt="img">
-              <div class="card-text">
-                <br>
+          <div class="photo-for-documents-cards">
+            <div class="photo-for-documents-card">
+              <img
+                class="photo-for-documents-card-img"
+                src="/source/img/photo-for-documents/pasportRF.png"
+                alt="img"
+              />
+              <div class="photo-for-documents-card-text">
+                <br />
                 <h3>Паспорт РФ</h3>
                 <p>4шт - 350р</p>
               </div>
             </div>
-            <div class="card">
-              <img class="card-img" src="/source/img/photo-for-documents/zagran.png" alt="img">
-              <div class="card-text">
+            <div class="photo-for-documents-card">
+              <img
+                class="photo-for-documents-card-img"
+                src="/source/img/photo-for-documents/zagran.png"
+                alt="img"
+              />
+              <div class="photo-for-documents-card-text">
                 <h3>Загранпаспорт</h3>
-                <p>2шт - 300р <br>
-                   4шт - 350р <br>
-                   6шт - 400р</p>
+                <p>
+                  2шт - 300р <br />
+                  4шт - 350р <br />
+                  6шт - 400р
+                </p>
               </div>
             </div>
-            <div class="card">
-              <img class="card-img" src="/source/img/photo-for-documents/_3х4.png" alt="img">
-              <div class="card-text">
+            <div class="photo-for-documents-card">
+              <img
+                class="photo-for-documents-card-img"
+                src="/source/img/photo-for-documents/_3х4.png"
+                alt="img"
+              />
+              <div class="photo-for-documents-card-text">
                 <h3>Фото 3x4</h3>
-                <p>3шт - 250р <br>
-                6шт - 300р</p>
+                <p>
+                  3шт - 250р <br />
+                  6шт - 300р
+                </p>
               </div>
             </div>
-            <div class="card">
-              <img class="card-img" src="/source/img/photo-for-documents/_4х6.png" alt="img">
-              <div class="card-text">
+            <div class="photo-for-documents-card">
+              <img
+                class="photo-for-documents-card-img"
+                src="/source/img/photo-for-documents/_4х6.png"
+                alt="img"
+              />
+              <div class="photo-for-documents-card-text">
                 <h3>Фото 4x6</h3>
-                <p>2шт - 300р <br>
-                  4шт - 350р <br>
-                  6шт - 400р</p>
+                <p>
+                  2шт - 300р <br />
+                  4шт - 350р <br />
+                  6шт - 400р
+                </p>
               </div>
             </div>
-            <div class="card">
-              <img class="card-img" src="/source/img/photo-for-documents/unknown.png" alt="img">
-              <div class="card-text">
+            <div class="photo-for-documents-card">
+              <img
+                class="photo-for-documents-card-img"
+                src="/source/img/photo-for-documents/unknown.png"
+                alt="img"
+              />
+              <div class="photo-for-documents-card-text">
                 <p>Сделаем фото вашего формата</p>
               </div>
             </div>
@@ -100,10 +128,65 @@
         </div>
       </section>
       <section class="block print">
-        <h2 class="block-content-title">Печать и проявка плёнки</h2>
-        <p class="block-content-text">
-          Фотопечать умерла? - Нет! Всё больше молодёжи приходит к нам за реальными фото, да ещё и с плёнки! Вспомните, как, придя к кому-то в гости, смотрели фотоальбом. Это же целое действо! Приятное занятие, за которым можно провести время с друзьями и близкими.
-        </p>
+        <div class="block-content">
+          <h2 class="block-content-title">Печать и проявка плёнки</h2>
+          <div class="print-content-top">
+            <p class="print-content-top-text">
+              Фотопечать умерла? - Нет! Всё больше молодёжи приходит к нам за
+              реальными фото, да ещё и с плёнки! Вспомните, как, придя к кому-то
+              в гости, смотрели фотоальбом. Это же целое действо! Приятное
+              занятие, за которым можно провести время с друзьями и близкими.
+            </p>
+            <div class="print-content-top-card">
+              <img
+                class="print-content-top-card-img"
+                src="/source/img/print/print-machine.png"
+                alt="img"
+              />
+              <div class="print-content-top-card-text">
+                <p>На этой машине мы печатаем фото</p>
+              </div>
+            </div>
+          </div>
+          <div class="print-content-bottom">
+            <div class="print-content-bottom-card">
+              <img
+                class="print-content-bottom-card-img"
+                src="/source/img/print/print-machine-photo-born.png"
+                alt="img"
+              />
+              <div class="print-content-bottom-card-text">
+                <p>Рождение фотографии...</p>
+              </div>
+            </div>
+            <p class="print-content-bottom-text">
+              Мы печатаем фото в специальной фотолаболатории с помощью
+              обородувания японской компании <span>Fujifilm</span>. Краска
+              сочная, стойкая и не выгорает. То что нужно, чтобы сохранить
+              память на века, ведь живое фото надежнее цифрового носителя. Не
+              забывайте время от времени сохранять все самые важные моменты
+              вашей жизни на настоящей фотографии, а мы вам в этом поможем.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="block recovery">
+        <div class="block-content">
+          <h3 class="block-content-title">Восстановление и отцифровка</h3>
+          <p class="block-content-text">
+            Восстановим старые фото и отцифруем видеокассеты.
+          </p>
+          <img
+            class="recovery-img"
+            src="/source/img/recovery/recovery.png"
+            alt="img"
+          />
+        </div>
+      </section>
+      <section class="block polygraphy">
+        <div class="block-content">
+          <h3 class="block-content-title">Полиграфия</h3>
+        </div>
       </section>
     </main>
   </body>
