--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
                         <p class="contacts-card-text">1. Заходим в Дом быта</p>
                     </div>
                     <div class="contacts-card">
-                        <p class="contacts-card-text">2. Перед Спортландией - налево</p>
+                        <p class="contacts-card-text">2. Перед Спортландией <br> - налево</p>
 
                         <img src="/source/img/contacts/step2.png" alt="">
                     </div>
                     <div class="contacts-card">
-                        <p class="contacts-card-text">3. Поднимаемся по лестнице</p>
+                        <p class="contacts-card-text">3. Поднимаемся <br>по лестнице</p>
 
                         <img src="/source/img/contacts/step3.png" alt="">
                     </div>
@@ -234,6 +234,9 @@
             </div>
             </div>
         </section>
+        <footer>
+            <p>	&copy 1998 - 2022 Брянск</p>
+        </footer>
     </main>
 </body>
 <script src="script.js"></script>
